Avoid jumping scrollbars

--- a/public/global.css
+++ b/public/global.css
@@ -19,6 +19,7 @@ body {
 	background-size: cover;
 	color: #000;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	overflow-y: scroll;
 }
 
 @media (min-width: 800px) {
